<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/OpisWyniku1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OpisWyniku1" />

        <TextView
            android:id="@+id/Wynik1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/OpisWyniku2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OpisWyniku2" />

        <TextView
            android:id="@+id/Wynik2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/PrzyciskPowrot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PrzyciskPowrot" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>